<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIU WiFi Auto Login</string>
    <string name="action_settings">Settings</string>
    <string name="pref_category_account">Account</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_category_about">About</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_summary_username">Enter your username here</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_summary_password">Enter your password here</string>
    <string name="pref_title_enableAutoLogin">Enable auto login</string>
    <string name="pref_title_showNotification">Show notification</string>
    <string name="pref_summary_showNotification">when connected to SIU WiFi</string>
    <string name="pref_title_alwaysShowNotification">Always show notification</string>
    <string name="pref_summary_alwaysShowNotification">while connected to SIU WiFi</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_developer">Developer</string>
    <string name="developer_name">Danudej Saksupa</string>
    <string name="developer_website">https://www.facebook.com/armkillbill</string>
    <string name="developer_facebook">fb://profile/1066036592</string>
    <string name="app_market">market://details?id=com.armkillbill.android.siuwifiautologin</string>
	<string name="app_website">http://play.google.com/store/apps/details?id=com.armkillbill.android.siuwifiautologin</string>
	<string name="testing_url">http://autologin.siu.ac.th/</string>
	<string name="testing_title">SIU WiFi Auto Login Testing</string>
	<string name="siu_login_title">SIU Internet Connection Login</string>
</resources>